# wot-epub-splitter

./: .gitignore  ReadMe.md  pyproject.toml  split_wot_epub.py
